# kaostrade

./: .dockerignore  .gitignore  Dockerfile  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py
app/backtest/: __init__.py  candle_strategy.py  regime_strategy.py  strategy_profiles.py
app/collector/: __init__.py  backfill.py  collect_once.py  runner.py
app/data/: __init__.py  db.py  schema.sql
app/exchange/: __init__.py  bithumb_public.py
app/features/: __init__.py  backfill_features.py  coverage_report.py  market_features.py
app/paper/: __init__.py  daemon.py  execution.py  signal_preview.py  simulator.py  state.py  status.py  strategy.py
app/regime/: __init__.py  classifiers.py  rule_based.py
app/tui/: __init__.py  dashboard.py  paper_monitor.py
tests/: test_candle_strategy.py  test_paper_daemon.py  test_paper_monitor.py  test_paper_simulator.py  test_paper_status.py  test_signal_preview.py
