[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "kaostrade"
version = "0.1.0"
description = "Docker-first Python app for KaosTrade."
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "pydantic",
    "pyyaml",
    "rich",
    "textual",
    "pandas",
    "numpy",
]

[tool.setuptools.packages.find]
include = ["app*"]
